fix modal scrollbar position

--- a/src/sass/components/_popups.sass
+++ b/src/sass/components/_popups.sass
@@ -4,6 +4,7 @@
   text-align: left
   margin: 0 auto
   padding: 100px
+  padding-right: 50px
   // max-height: 98vh
   position: relative
   &__info
@@ -24,13 +25,14 @@
     top: 50px
   &__title
     font-size: 48px
+    padding-right: 50px
     text-align: left
   p
     font-weight: 300
     font-size: 24px
     line-height: 1.25
     margin-top: 30px
-    padding-right: 15px
+    padding-right: 65px
     &:first-child
       margin-top: 0
     span
@@ -53,6 +55,7 @@
 +r($desktop)
   .popup
     padding: 60px
+    padding-right: 30px
     .mfp-close
       right: 28px
       top: 28px
@@ -60,13 +63,16 @@
       height: 28px
     &__title
       font-size: 36px
+      padding-right: 30px
     p
       font-size: 20px
       margin-top: 20px
+      padding-right: 45px
 
 +r($tablet)
   .popup
     padding: 30px
+    padding-right: 15px
     .mfp-close
       right: 14px
       top: 14px
@@ -74,9 +80,11 @@
       height: 14px
     &__title
       font-size: 24px
+      padding-right: 15px
     p
       font-size: 14px
       margin-top: 14px
+      padding-right: 30px
       &.dot
         &:before
           line-height: 0
@@ -86,8 +94,8 @@
 .mfp-zoom-in
   .mfp-with-anim
     opacity: 0
-    transition: all 0.2s ease-in-out 
-    transform: scale(0.8) 
+    transition: all 0.2s ease-in-out
+    transform: scale(0.8)
 
   &.mfp-bg
     opacity: 0
@@ -96,13 +104,13 @@
   &.mfp-ready
     .mfp-with-anim
       opacity: 1
-      transform: scale(1) 
+      transform: scale(1)
     &.mfp-bg
       opacity: 0.8
 
   &.mfp-removing
     .mfp-with-anim
-      transform: scale(0.8) 
+      transform: scale(0.8)
       opacity: 0
     &.mfp-bg
       opacity: 0
